--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "techmagic academy task_backend part",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "prod": " node ./server.js",
+    "dev": "nodemon ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"    
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,9 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.0"
+    "mongoose": "^8.5.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
