--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "techmagic academy task_backend part",
   "main": "server.js",
   "scripts": {
-    "prod": " node ./server.js",
-    "dev": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"    
+    "prod": "cross-env NODE_ENV=production node ./server.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
